# sec-analyzer

./: .gitignore  CLAUDE.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  main.py
app/models/: company.py  filing.py
app/routers/: companies.py  filings.py
app/services/: company_service.py  edgar_client.py  filing_service.py
tests/: test_companies.py  test_filings.py
